# ELSA-Robotics-Challenge

./: .gitignore  EXPERIMENTS.md  FKCameraObjectPolicy_method.txt  data_downloader.py  dataset_config.yaml  dataset_config_frcr_bc_gripper.yaml  dataset_config_frcr_bc_gripper_v2.yaml  dataset_config_legacy_bc_delta_ee_pose.yaml  dataset_config_legacy_bc_delta_ee_rotvec.yaml  dataset_config_legacy_bc_ee_pose.yaml  dataset_config_legacy_bc_ee_pose_rotvec.yaml  environment.yml  pyproject.toml  stage_method_diagrams.txt
docs/: action_pipeline_presets_kr.md  dataset_replay_method_summary_kr.txt  experiment_record_20260421_kr.md  federated_method_plan_kr.md  fl_experiment_roadmap_kr.md  live_sr_eval.md  live_sr_eval_handoff.md  model_catalog_kr.md  replay_and_sameenv_handoff_kr.md  same_env_diagnostics_kr.md  same_env_vision_action_suite_kr.md  validation_agent_report_kr.md  volumedp_federated_design_kr.md
elsa_learning_agent/: agent.py  agent_forward_kinematics.py  config_utils.py  config_validation.py  ik_action_modes.py  kinematics.py  live_rollout.py  model_registry.py  utils.py
experiments/: README.md  action_pipeline_joint_position_direct_template.yaml  action_pipeline_joint_position_to_benchmark_joint_velocity_servo_template.yaml  action_pipeline_joint_velocity_direct_template.yaml  corl_plan.json  fl_dinov3_diffusion_lora4_jvdirect_fedavg.yaml  fl_dinov3_diffusion_lora4_jvdirect_fedprox.yaml  sameenv_dino_depth_diffusion_lora8_jvdirect.yaml  slide_block_to_target_absjpos_chunk3_dinov3_fedprox.yaml  slide_block_to_target_absjpos_chunk3_dinov3_sameenv.yaml  slide_block_to_target_absjpos_chunk4_depth_anything_fedprox.yaml  slide_block_to_target_absjpos_chunk4_dino_depth_fedprox.yaml  slide_block_to_target_absjpos_chunk4_dinov3_fedprox.yaml  slide_block_to_target_absjpos_chunk4_dinov3_fedprox_exec2.yaml  slide_block_to_target_absjpos_chunk4_dinov3_sameenv.yaml  slide_block_to_target_absjpos_chunk4_dinov3_sameenv_exec2.yaml  slide_block_to_target_absjpos_cnn_debug.yaml  slide_block_to_target_chunk3_dinov3_fedprox_main.yaml  slide_block_to_target_keyframe4_cnn_fedprox.yaml  slide_block_to_target_keyframe4_dinov3_fedprox.yaml  slide_block_to_target_keyframe4_dinov3_sameenv.yaml  slide_block_to_target_keyframe_peract_cnn_fedprox.yaml  slide_block_to_target_keyframe_peract_depth_anything_fedprox.yaml  slide_block_to_target_keyframe_peract_dino_depth_fedprox.yaml  slide_block_to_target_keyframe_peract_dinov3_fedprox.yaml  slide_block_to_target_sameenv_action_chunk3_dinov3_jpdirect.yaml  slide_block_to_target_sameenv_action_chunk3_dinov3_servo.yaml  (+39 more)
(+115 files in other folders)
